manifest/blue-web/ingress-blue-web.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-web-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: blue-web.apps.kongkang.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: blue-web
            port:
              number: 80
